--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 <body>
 
 <h3>JavaScript 实例</h3>
-<a target="_blank" href="js_howto.html">基础 JavaScript 实例</a><br>
-<a target="_blank" href="js_statements.html">JavaScript 语句、注释和代码块</a><br>
-<a target="_blank" href="js_variables.html">JavaScript 变量</a><br>
-<a target="_blank" href="js_if_else.html">JavaScript 条件语句 If ... Else</a><br>
-<a target="_blank" href="js_popup.html">JavaScript 消息框</a><br>
-<a target="_blank" href="js_functions.html">JavaScript 函数</a><br>
-<a target="_blank" href="js_loop_for.html">JavaScript 循环</a><br>
-<a target="_blank" href="js_errors.html">JavaScript 错误处理</a><br>
+<a target="_blank" href="js/js_howto.html">基础 JavaScript 实例</a><br>
+<a target="_blank" href="js/js_statements.html">JavaScript 语句、注释和代码块</a><br>
+<a target="_blank" href="js/js_variables.html">JavaScript 变量</a><br>
+<a target="_blank" href="js/js_if_else.html">JavaScript 条件语句 If ... Else</a><br>
+<a target="_blank" href="js/js_popup.html">JavaScript 消息框</a><br>
+<a target="_blank" href="js/js_functions.html">JavaScript 函数</a><br>
+<a target="_blank" href="js/js_loop_for.html">JavaScript 循环</a><br>
+<a target="_blank" href="js/js_errors.html">JavaScript 错误处理</a><br>
+<a target="_blank" href="js/js_errors.html">高级 JavaScript 实例</a><br>
 
 <h3>JavaScript Object 实例</h3>
 
 <h3>HTML DOM 实例</h3>
 
 <h3>JavaScript 高级程序设计 实例</h3>
-<a target="_blank" href="practice.html">JavaScript 高级程序设计练习</a><br>
+<a target="_blank" href="js/practice.html">JavaScript 高级程序设计练习</a><br>
 
 
 </body>
