--- a/index.html
+++ b/index.html
@@ -3,32 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>JsPractice</title>
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- 可选的Bootstrap主题文件（一般不用引入） -->
+    <!--<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">-->
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <style type="text/css">
-        a:visited {
-            color: blue;
+        .btn {
+            margin: 5px 0;
         }
     </style>
 </head>
 <body>
-
-<h3>JavaScript 实例</h3>
-<a target="_blank" href="js/js_howto.html">基础 JavaScript 实例</a><br>
-<a target="_blank" href="js/js_statements.html">JavaScript 语句、注释和代码块</a><br>
-<a target="_blank" href="js/js_variables.html">JavaScript 变量</a><br>
-<a target="_blank" href="js/js_if_else.html">JavaScript 条件语句 If ... Else</a><br>
-<a target="_blank" href="js/js_popup.html">JavaScript 消息框</a><br>
-<a target="_blank" href="js/js_functions.html">JavaScript 函数</a><br>
-<a target="_blank" href="js/js_loop_for.html">JavaScript 循环</a><br>
-<a target="_blank" href="js/js_errors.html">JavaScript 错误处理</a><br>
-<a target="_blank" href="js/js_errors.html">高级 JavaScript 实例</a><br>
-
-<h3>JavaScript Object 实例</h3>
-
-<h3>HTML DOM 实例</h3>
-
-<h3>JavaScript 高级程序设计 实例</h3>
-<a target="_blank" href="js/practice.html">JavaScript 高级程序设计练习</a><br>
+<div class="container">
 
 
+    <h3>JavaScript 实例</h3>
+    <a target="_blank" class="btn btn-info " href="js/js_howto.html">基础 JavaScript 实例</a><br>
+    <a target="_blank" class="btn btn-info " role="button" href="js/js_statements.html">JavaScript 语句、注释和代码块</a><br>
+    <a target="_blank" class="btn btn-info" href="js/js_variables.html">JavaScript 变量</a><br>
+    <a target="_blank" class="btn btn-info" href="js/js_if_else.html">JavaScript 条件语句 If ... Else</a><br>
+    <a target="_blank" class="btn btn-info" href="js/js_popup.html">JavaScript 消息框</a><br>
+    <a target="_blank" class="btn btn-info" href="js/js_functions.html">JavaScript 函数</a><br>
+    <a target="_blank" class="btn btn-info" href="js/js_loop_for.html">JavaScript 循环</a><br>
+    <a target="_blank" class="btn btn-info" href="js/js_errors.html">JavaScript 错误处理</a><br>
+    <a target="_blank" class="btn btn-info" href="js/js_errors.html">高级 JavaScript 实例</a><br>
+
+    <h3>JavaScript Object 实例</h3>
+
+    <h3>HTML DOM 实例</h3>
+
+    <h3>JavaScript 高级程序设计 实例</h3>
+    <a target="_blank" href="js/practice.html">JavaScript 高级程序设计练习</a><br>
+
+</div>
 </body>
 </html>
