--- a/js/jquery/jquery_html.html
+++ b/js/jquery/jquery_html.html
@@ -27,6 +27,12 @@
             $("#btn6").click(function () {
                 $("#btn6").css({"background-color": "yellow", "font-size": "200%"});
             });
+            $("#btn7").click(function(){
+            	var text="";
+            	text+=$("#test").width();
+            	text+=" "+$("#test").height();
+            	$("#btn7").html(text);
+            })
         });
     </script>
     <style type="text/css">
@@ -57,6 +63,7 @@
 <button id="btn4">删除元素</button>
 <button id="btn5">添加类</button>
 <button id="btn6">设置多个样式</button>
+<button id="btn7">尺寸</button>
 </body>
 
 </html>
