--- a/index.html
+++ b/index.html
@@ -13,37 +13,51 @@
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <style type="text/css">
-    .btn {
-        margin: 5px 0;
-    }
+        .btn {
+            margin: 5px 0;
+        }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <h3>JavaScript 实例</h3>
-        <a target="_blank" class="btn btn-info " href="js/javascript/js_howto.html">基础 JavaScript 实例</a>
-        <a target="_blank" class="btn btn-info " role="button" href="js/javascript/js_statements.html">JavaScript
+<div class="container">
+    <h3>JavaScript 实例</h3>
+    <a target="_blank" class="btn btn-info " href="js/javascript/js_howto.html">基础 JavaScript 实例</a>
+    <a target="_blank" class="btn btn-info " role="button" href="js/javascript/js_statements.html">JavaScript
         语句、注释和代码块</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_variables.html">JavaScript 变量</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_if_else.html">JavaScript 条件语句 If ... Else</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_popup.html">JavaScript 消息框</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_functions.html">JavaScript 函数</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_loop_for.html">JavaScript 循环</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">JavaScript 错误处理</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">高级 JavaScript 实例</a>
-        <h3>JavaScript Object 实例</h3>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_variables.html">JavaScript 变量</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_if_else.html">JavaScript 条件语句 If ... Else</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_popup.html">JavaScript 消息框</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_functions.html">JavaScript 函数</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_loop_for.html">JavaScript 循环</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">JavaScript 错误处理</a>
-        <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">高级 JavaScript 实例</a>
-        <h3>HTML DOM 实例</h3>
-        <h3>JavaScript 高级程序设计 实例</h3>
-        <a target="_blank" href="js/book/practice.html">JavaScript 高级程序设计练习</a>
-    </div>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_variables.html">JavaScript 变量</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_if_else.html">JavaScript 条件语句 If ... Else</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_popup.html">JavaScript 消息框</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_functions.html">JavaScript 函数</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_loop_for.html">JavaScript 循环</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">JavaScript 错误处理</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">高级 JavaScript 实例</a>
+    <!--<h3>JavaScript Object 实例</h3>-->
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_variables.html">JavaScript 变量</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_if_else.html">JavaScript 条件语句 If ... Else</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_popup.html">JavaScript 消息框</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_functions.html">JavaScript 函数</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_loop_for.html">JavaScript 循环</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">JavaScript 错误处理</a>
+    <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">高级 JavaScript 实例</a>
+    <!--<h3>HTML DOM 实例</h3>-->
+    <!--<h3>JavaScript 高级程序设计 实例</h3>-->
+    <a target="_blank" class="btn btn-info" href="js/book/practice.html">JavaScript 高级程序设计练习</a>
+    <a target="_blank" class="btn btn-info" href="js/ajax">js/ajax</a>
+    <h3>ife</h3>
+    <a target="_blank" class="btn btn-info" href="js/ife">js/ife</a>
+    <a target="_blank" class="btn btn-info" href="js/ife/task_13.html">task_13</a>
+    <a target="_blank" class="btn btn-info" href="js/ife/task_14.html">task_14</a>
+    <a target="_blank" class="btn btn-info" href="js/ife/task_15.html">task_15</a>
+    <a target="_blank" class="btn btn-info" href="js/ife/task_16.html">task_16</a>
+    <a target="_blank" class="btn btn-info" href="js/ife/task_17.html">task_17</a>
+    <a target="_blank" class="btn btn-info" href="js/ife/task_18.html">task_18</a>
+
+    <a target="_blank" class="btn btn-info" href="js/ferris">js/ferris</a>
+    <a target="_blank" class="btn btn-info" href="js/jquery">js/jquery</a>
+    <a target="_blank" class="btn btn-info" href="js/jquery/jquery_examples.html">jquery_examples</a>
+    <a target="_blank" class="btn btn-info" href="js/ajax/dashboard2.html">dashboard2</a>
+</div>
 </body>
 
 </html>
