--- a/src/js/javascript/js_errors.html
+++ b/src/js/javascript/js_errors.html
@@ -17,7 +17,7 @@
             txt += "点击“确定”继续查看本页，\n"
             txt += "点击“取消”返回首页。\n\n"
             if (!confirm(txt)) {
-                document.location.href = "/index.html"
+                document.location.href = "/src/index.html"
             }
         }
     }
