--- a/src/index.html
+++ b/src/index.html
@@ -22,24 +22,24 @@
 <body>
 <div class="container">
     <h3>JavaScript 实例</h3>
-    <a target="_blank" class="btn btn-info " href="js/javascript/js_howto.html">基础 JavaScript 实例</a>
-    <a target="_blank" class="btn btn-info " role="button" href="js/javascript/js_statements.html">JavaScript
+    <a target="_blank" class="btn btn-info " href="js/w3/javascript/js_howto.html">基础 JavaScript 实例</a>
+    <a target="_blank" class="btn btn-info " role="button" href="js/w3/javascript/js_statements.html">JavaScript
         语句、注释和代码块</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_variables.html">JavaScript 变量</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_if_else.html">JavaScript 条件语句 If ... Else</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_popup.html">JavaScript 消息框</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_functions.html">JavaScript 函数</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_loop_for.html">JavaScript 循环</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">JavaScript 错误处理</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">高级 JavaScript 实例</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_variables.html">JavaScript 变量</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_if_else.html">JavaScript 条件语句 If ... Else</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_popup.html">JavaScript 消息框</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_functions.html">JavaScript 函数</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_loop_for.html">JavaScript 循环</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_errors.html">JavaScript 错误处理</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_errors.html">高级 JavaScript 实例</a>
     <!--<h3>JavaScript Object 实例</h3>-->
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_variables.html">JavaScript 变量</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_if_else.html">JavaScript 条件语句 If ... Else</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_popup.html">JavaScript 消息框</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_functions.html">JavaScript 函数</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_loop_for.html">JavaScript 循环</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">JavaScript 错误处理</a>
-    <a target="_blank" class="btn btn-info" href="js/javascript/js_errors.html">高级 JavaScript 实例</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_variables.html">JavaScript 变量</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_if_else.html">JavaScript 条件语句 If ... Else</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_popup.html">JavaScript 消息框</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_functions.html">JavaScript 函数</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_loop_for.html">JavaScript 循环</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_errors.html">JavaScript 错误处理</a>
+    <a target="_blank" class="btn btn-info" href="js/w3/javascript/js_errors.html">高级 JavaScript 实例</a>
     <!--<h3>HTML DOM 实例</h3>-->
     <!--<h3>JavaScript 高级程序设计 实例</h3>-->
     <a target="_blank" class="btn btn-info" href="js/book/practice.html">JavaScript 高级程序设计练习</a>
