--- a/src/test.html
+++ b/src/test.html
@@ -3,8 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+
+        div {
+            width: 100%;
+        }
+
+        aside {
+            display: inline-block;
+            width: 10%;
+            padding: 0;
+            background-color: #FFDDDD;
+        }
+
+        ul {
+            background-color: #ffefa4;
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            width: 100px;
+            list-style: none;
+            display: block;
+            padding: 15px;
+            background-color: #7deeff;
+        }
+
+        a {
+            text-align: center;
+        }
+
+        #main {
+            display: inline;
+            vertical-align: top;
+
+        }
+
+    </style>
 </head>
 <body>
+
+<div>
+    <aside>
+        <ul>
+            <li>
+                <a href="#">aaa</a>bbb
+            </li>
+            <li>
+                <a href="#">aaa</a>bbb
+            </li>
+            <li>
+                <a href="#">aaa</a>bbb
+            </li>
+            <li>
+                <a href="#">aaa</a>bbb
+            </li>
+            <li>
+                <a href="#">aaa</a>bbb
+            </li>
+        </ul>
+    </aside>
+    <div id="main">
+        sdasd
+    </div>
+</div>
+
+
 <script>
 
     var a = 1
