--- a/src/todomvc/jquery/index.html
+++ b/src/todomvc/jquery/index.html
@@ -16,15 +16,17 @@
         <input id="toggle-all" type="checkbox">
         <label for="toggle-all">Mark all as complete</label>
         <ul id="todo-list"></ul>
-        <footer id="footer"></footer>
     </section>
+    <footer id="footer"></footer>
 </section>
+
 <footer id="info">
     <p>Double-click to edit a todo</p>
 </footer>
+
 <script id="todo-template" type="text/x-handlebars-template">
     {{#this}}
-    <li {{#if completed}}class="completed"{{/if}} data-id="{{id}}">
+    <li {{#if completed}}class="completed" {{/if}} data-id="{{id}}">
     <div class="view">
         <input class="toggle" type="checkbox" {{#if completed}}checked{{/if}}>
         <label>{{title}}</label>
@@ -47,15 +49,17 @@
             <a {{#eq filter 'completed'}}class="selected"{{/eq}}href="#/completed">Completed</a>
         </li>
     </ul>
-    {{#if completedTodos}}<button id="clear-completed">Clear completed</button>{{/if}}
+    {{#if completedTodos}}
+    <button id="clear-completed">Clear completed</button>
+    {{/if}}
 </script>
-
-
-</body>
 
 <!--<script src="../../../node_modules/todomvc-common/base.js"></script>-->
 <script src="../../../node_modules/jquery/dist/jquery.js"></script>
 <script src="../../../node_modules/handlebars/dist/handlebars.js"></script>
 <script src="../../../node_modules/director/build/director.js"></script>
 <script src="app.js"></script>
+
+</body>
+
 </html>
