--- a/src/todomvc/backbone/example.html
+++ b/src/todomvc/backbone/example.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>backbone</title>
     <script src="libs/jquery-3.1.0.js"></script>
-    <script src="../underscore/underscore.js"></script>
+    <script src="libs/underscore.js"></script>
     <script src="libs/backbone.js"></script>
 </head>
 <body>
@@ -12,6 +12,31 @@
 <ul id="world-list">
 </ul>
 <script>
+
+    var CustomRouter = Backbone.Router.extend({
+        routes: {
+            '': 'index', // 当URL Hash在根目录时执行index方法：url#
+            'list': 'getList', // 当URL Hash在list节点时执行getList方法：url#list
+            'detail/:id': 'query', // 当URL Hash在detail节点时执行query方法，并将detail后的数据作为参数传递给query方法：url#list/1001
+            '*error': 'showError' // 当URL Hash不匹配以上规则时, 执行error方法
+        },
+        index: function () {
+            alert('index');
+        },
+        getList: function () {
+            alert('getList');
+        },
+        query: function (id) {
+            alert('query id: ' + id);
+        },
+        showError: function (error) {
+            alert('error hash: ' + error);
+        },
+    });
+
+    var custom = new CustomRouter();
+    Backbone.history.start();
+
     World = Backbone.Model.extend({
         name: null
     });
